Refactor: Tournament code smells